--- a/flashCards.html
+++ b/flashCards.html
@@ -8,18 +8,24 @@
 <div class = "flashCardContainer">
    <div class="row">
 		<div class="col-md-6" id ="flashCard1"><h2>What is 1 + 1?</h2></div>
+		<br>
+		    <!-- creates a button that fires and event which triggers our function called loadJson() which is on the flashCards.js file.-->
+		    <button type ="button" class="btn btn-primary btn-lg btn-block" onclick = "loadJSON()">Click for Answer.</button>
+		</div>
+		<br>
+
 		<div class="col-md-6" id ="flashCard2"><h2>What is 2 + 1?</h2></div>
+		<br>
+		    <!-- creates a button that fires and event which triggers our function called loadJson() which is on the flashCards.js file.-->
+		    <button type ="button" class="btn btn-primary btn-lg btn-block" onclick = "loadJSONTwo()">Click for Answer.</button>
+		</div>
+		<br>
     </div>
-    <br>
-    <!-- creates a button that fires and event which triggers our function called loadJson() which is on the flashCards.js file.-->
-    <button type ="button" class="btn btn-primary btn-lg btn-block" onclick = "loadJSON()">Click for Answer.</button>
-</div>
-    <br>
+  
 
 <!-- include external flashCards.js script. -->
 <script src="flashCards.js"></script>
 
 </body>
-
 </html>
  
