--- a/flashCards.html
+++ b/flashCards.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Simple Flash Cards App Using JSON</title>
+	<title>Simple Flashcards App Using JSON</title>
 </head>
 <body>
 
 <div class = "flashCardContainer">
-   <div class="row">
+
+	<header>
+		<h1>SIMPLE FLASHCARDS JSON APP.</h1>
+	</header>
+	<div class="row">
 		<div class="col-md-6" id ="flashCard1"><h2>What is 1 + 1?</h2></div>
 		<br>
 		    <!-- creates a button that fires and event which triggers our function called loadJson() which is on the flashCards.js file.-->
@@ -20,7 +24,7 @@
 		    <button type ="button" class="btn btn-primary btn-lg btn-block" onclick = "loadJSONTwo()">Click for Answer.</button>
 		</div>
 		<br>
-    </div>
+	</div>
   
 
 <!-- include external flashCards.js script. -->
